--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="10dp"
             android:checked="true"
             android:textColor="@android:color/black"
-            android:text="RadioButton 1" />
+            android:text="RadioButton 1" />samb
 
         <RadioButton
             android:id="@+id/radioButton2"
